recursion.cons.lessons.recursion.cons.Min.scala.error
min:4: error: type mismatch;
 found   : Unit
 required: Int
	for(i<-1 to l.length-1)
             ^